Updated rotate logic in FileAdjustmentSettings.java, ScanController and ScanManager.java so that all rotations a legal and not just 90, 180, 270, when this was saved ON files in db. Added onUndo and undoPush in ScanController so that later, when object states are saved in the various methods, we can undo up to a set times.